// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Plan, create, and configure production-ready Azure Kubernetes Service (AKS) clusters. Covers Day-0 checklist, SKU selection (Automatic vs Standard), networking options (private API server, Azure CNI Overlay, egress configuration), security (workload identity, Azure Policy, Key Vault CSI driver, Deployment Safeguards), and operations (monitoring, upgrade strategy, autoscaling, cost analysis, node pools). WHEN: provision AKS cluster, design AKS networking, choose AKS SKU, secure AKS, set up AKS. DO NOT USE FOR: deploying apps to AKS (use azure-deploy), debugging AKS issues (use azure-diagnostics).",
  "extractedKeywords": [
    "aks",
    "analysis",
    "apps",
    "automatic",
    "autoscaling",
    "azure",
    "azure-deploy",
    "azure-diagnostics",
    "checklist",
    "choose",
    "cli",
    "cluster",
    "clusters",
    "configuration",
    "configure",
    "container",
    "cost",
    "covers",
    "create",
    "day-0",
    "debugging",
    "deploy",
    "deploying",
    "deployment",
    "design",
    "diagnostic",
    "driver",
    "egress",
    "entra",
    "function",
    "identity",
    "issues",
    "key vault",
    "kubernetes",
    "mcp",
    "monitor",
    "monitoring",
    "networking",
    "node",
    "observability",
    "operations",
    "options",
    "overlay",
    "plan",
    "policy",
    "pools",
    "private",
    "production-ready",
    "provision",
    "safeguards",
    "secure",
    "security",
    "selection",
    "server",
    "service",
    "standard",
    "strategy",
    "upgrade",
    "vault",
    "when",
    "workload",
  ],
  "name": "azure-kubernetes",
}
`;

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analysis",
  "apps",
  "automatic",
  "autoscaling",
  "azure",
  "azure-deploy",
  "azure-diagnostics",
  "checklist",
  "choose",
  "cli",
  "cluster",
  "clusters",
  "configuration",
  "configure",
  "container",
  "cost",
  "covers",
  "create",
  "day-0",
  "debugging",
  "deploy",
  "deploying",
  "deployment",
  "design",
  "diagnostic",
  "driver",
  "egress",
  "entra",
  "function",
  "identity",
  "issues",
  "key vault",
  "kubernetes",
  "mcp",
  "monitor",
  "monitoring",
  "networking",
  "node",
  "observability",
  "operations",
  "options",
  "overlay",
  "plan",
  "policy",
  "pools",
  "private",
  "production-ready",
  "provision",
  "safeguards",
  "secure",
  "security",
  "selection",
  "server",
  "service",
  "standard",
  "strategy",
  "upgrade",
  "vault",
  "when",
  "workload",
]
`;
